--- a/css/jquery.terminal.css
+++ b/css/jquery.terminal.css
@@ -12,7 +12,7 @@
  * Copyright (c) 2011-2017 Jakub Jankiewicz <http://jcubic.pl>
  * Released under the MIT license
  *
- * Date: Fri, 13 Oct 2017 09:56:06 +0000
+ * Date: Fri, 13 Oct 2017 16:47:22 +0000
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
@@ -79,6 +79,7 @@ body.terminal {
     /*margin-top: 3px; */
     float: left;
     overflow: hidden;
+    padding-bottom: 3px;
 }
 .terminal .inverted, .cmd .inverted {
     background-color: #aaa;
